--- a/client/app/scripts/liveblog-edit/views/scorecards.html
+++ b/client/app/scripts/liveblog-edit/views/scorecards.html
@@ -290,12 +290,12 @@
             </div>
             <hr hide-render>
             <div>
-                <label for="home.name" hide-render>Home Name</label>
+                <label for="home.name" hide-render>Home Team</label>
                 <input id="home.name" name="$home.name" class="team-name" necessary="true" />
             </div>
         </fieldset>
         <fieldset>
-            <legend class="legend--padding-top" hide-render>Home Scorers:</legend>
+            <legend class="legend--padding-top" hide-render>Home Scorers</legend>
             <ul class="scorecard-top__scorers">
                 <li>
                     <div class="time">
@@ -303,7 +303,7 @@
                         <input name="$home.scorers[0].time" tandem="$home.scorers[0].name" number="true" />
                     </div>
                     <div>
-                        <label hide-render>Home Name</label>
+                        <label hide-render>Home Team</label>
                         <input name="$home.scorers[0].name" tandem="$home.scorers[0].time"/>
                     </div>
                 </li>
@@ -320,12 +320,12 @@
             </div>
             <hr hide-render>
             <div>
-                <label for="away.name" hide-render>Away Name</label>
+                <label for="away.name" hide-render>Away Team</label>
                 <input id="away.name" name="$away.name" class="team-name" necessary="true"/>
             </div>
         </fieldset>
         <fieldset>
-            <legend class="legend--padding-top" hide-render>Away Scorers:</legend>
+            <legend class="legend--padding-top" hide-render>Away Scorers</legend>
             <ul class="scorecard-top__scorers">
                 <li>
                     <div>
@@ -333,7 +333,7 @@
                         <label hide-render>Minute</label>
                         <input name="$away.scorers[0].time" tandem="$away.scorers[0].name" number="true"/>
                     </div>
-                        <label hide-render>Away Name</label>
+                        <label hide-render>Away Team</label>
                         <input name="$away.scorers[0].name" tandem="$away.scorers[0].time"/>
                     </div>
                 </li>
