feature: limit scorecard fields.
LBSD-2007

--- a/client/app/scripts/liveblog-edit/views/scorecards.html
+++ b/client/app/scripts/liveblog-edit/views/scorecards.html
@@ -269,7 +269,7 @@
     <div class="scorecard-top__column scorecard-top__column--result">
         <div>
             <label for="home.score" hide-render>Home Score</label>
-            <input id="home.score" name="$home.score" class="team-score" number="true" necessary="true" />
+            <input id="home.score" name="$home.score" class="team-score" number="true" necessary="true" maxlength="4" />
         </div>
         <div class="team-score-colon">
             <span class="team-score">:</span>
