WIP: duplicatio of core css removed

--- a/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
+++ b/client/app/scripts/liveblog-edit/styles/liveblog-edit.scss
@@ -1,8 +1,7 @@
 // Styling for the liveblog edit page
 // ----------------------------------------------------------------------------------------
+@import '~lb-variables.scss';
 @import '~lb-mixins.scss';
-@import '~lb-bootstrap.scss';
-@import '~variables.scss';
 
 .blogedit {
     //left menu
