sd update: blog edit view and settings

--- a/client/app/styles/sass/lb-variables.scss
+++ b/client/app/styles/sass/lb-variables.scss
@@ -1,1 +1,9 @@
 @import '~superdesk-core/styles/sass/variables';
+
+// Sprite icons path
+// -------------------------
+$iconSpritePath:          "/images/glyphicons-halflings.png";
+$iconWhiteSpritePath:     "/images/glyphicons-halflings-white.png";
+
+$btnDefaultColor: rgba(0,0,0,15%);
+$btnDangerColor: #c83929
