--- a/client/app/styles/sass/lb-mixins.scss
+++ b/client/app/styles/sass/lb-mixins.scss
@@ -1,1 +1,25 @@
 @import '~superdesk-core/styles/sass/mixins';
+
+@mixin buttonStates($background:$btnDefaultColor, $color: $sd-text){
+    color: $color;
+    background-color: $background;
+    &:hover, &:focus {
+        background-color: darken($background,10%);
+        @include box-shadow(0 1px 2px 0 rgba(0,0,0,30%));
+        text-decoration: none;
+        color: $color;
+    }
+    &:focus {
+        outline:none !important;
+    }
+    &:active, &.active {
+        background-color: $background;
+        @include box-shadow(inset 0 1px 2px darken($background,12%));
+    }
+    &.disabled, &[disabled], &.disabled:hover, &[disabled]:hover, &.disabled:focus, &[disabled]:focus, &.disabled:active, &[disabled]:active {
+        cursor: default;
+        opacity: .2;
+        @include box-shadow(none);
+        background-color: $background;
+    }
+}
