update dependencies: marketplace, syndication

--- a/client/app/scripts/liveblog-edit/styles/settings.scss
+++ b/client/app/scripts/liveblog-edit/styles/settings.scss
@@ -211,6 +211,11 @@ $PADDING: 20px;
         }
     }
 }
+
+.team_settings .member-list {
+    min-height: 240px;
+}
+
 .edit-contributors {
     .search-result {
         top: 69px!important;
