--- a/client/app/scripts/liveblog-syndication/views/producer-list.html
+++ b/client/app/scripts/liveblog-syndication/views/producer-list.html
@@ -63,7 +63,8 @@
                     lb-producer-edit 
                     data-producer="selected.producer" 
                     data-onsave="render(producer)" 
-                    data-oncancel="closePreview()"></div>
+                    data-oncancel="closePreview()"
+                    data-producers="producers._items"></div>
             </div>
         </div>
     </div>
