Squashed 'server/liveblog/themes/themes_assets/default/' changes from 9f4bf13c..0e118ef7
0e118ef7 add: facebook embedly cards
b516f777 fix: added babelify for stage-0.
6bfaf22a Merge pull request #137 from liveblog/fix/sorting

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 0e118ef7a281c0a1348fe6f32c205835d80b6ecd

--- a/templates/template-item-embed.html
+++ b/templates/template-item-embed.html
@@ -1,7 +1,12 @@
 {% if ref.item.meta.provider_name|lower == 'youtube' and ref.item.meta.html %}
     <div class="item--embed__element lb-responsive-video">{{ ref.item.meta.html | safe }}</div>
-{% elif (ref.item.meta.provider_name|lower == 'facebook' or ref.item.meta.provider_name|lower == 'twitter') and ref.item.meta.html  %}
+{% elif (ref.item.meta.provider_name|lower == 'twitter') and ref.item.meta.html  %}
     <div class="item--embed__element">{{ ref.item.meta.html | safe }}</div>
+{% elif ref.item.meta.provider_name|lower == 'facebook' and ref.item.meta.original_url %}
+    <blockquote class="embedly-card" data-card-controls="0">
+        <h4><a href="{{ ref.item.meta.original_url }}">{{ ref.item.meta.credit }}</a></h4>
+        <p>{{ ref.item.meta.title }}</p>
+    </blockquote>
 {% elif ref.item.meta.provider_name|lower == 'instagram' and ref.item.meta.original_url %}
     <blockquote class="embedly-card" data-card-controls="0">
         <h4><a href="{{ ref.item.meta.original_url }}">{{ ref.item.meta.credit }}</a></h4>
