fix: add button type.

--- a/client/app/scripts/liveblog-bloglist/views/main.html
+++ b/client/app/scripts/liveblog-bloglist/views/main.html
@@ -204,7 +204,7 @@
                                         </div>
                                     </section>
                                     <p class="warn-block">If you are using the Liveblog 3 AMP theme, please make sure to use an aspect ratio of 3x2 (600x400 pixels) for the blog image.</p>
-                                    <button ng-if="preview.url" class="btn btn-default pull-right" ng-click="removeImage()" translate>Remove</button>
+                                    <button type="button" ng-if="preview.url" class="btn btn-default pull-right" ng-click="removeImage()" translate>Remove</button>
                                 </div>
                             </div>
                         </fieldset>
