fix: limit scorecard away score field

--- a/client/app/scripts/liveblog-edit/views/scorecards.html
+++ b/client/app/scripts/liveblog-edit/views/scorecards.html
@@ -276,7 +276,7 @@
         </div>
         <div>
             <label for="away.score" hide-render>Away Score</label>
-            <input id="away.score" name="$away.score" class="team-score" necessary="true" number="true" />
+            <input id="away.score" name="$away.score" class="team-score" necessary="true" number="true" maxlength="4" />
         </div>
     </div>
     <hr hide-render>
