Squashed 'server/liveblog/themes/themes_assets/default/' changes from 0e118ef..b78024b
b78024b Merge pull request #139 from liveblog/fix/embedly-headline-remove
f451b56 fix: remove embedly card headline LBSD-2104
24b541a Merge pull request #138 from ZeitOnline/feature/extend-theme-css
b33580b fix: relative dates added back
365f69d fix: LBSD-2096 waterproof iframe behaviour on IPhones
93ea06d Import parent theme CSS first as necessary

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: b78024b4860e558f3021f9b24f7727c4747222d2

--- a/less/reset.less
+++ b/less/reset.less
@@ -28,7 +28,16 @@ html.lb-wrapHtml, body.lb-wrapBody {
       font-size: 100%;
       font: inherit;
       vertical-align: baseline;
+      max-width: 100%;
   }
+
+  /* iOS trick */
+  iframe {
+    width: 1px;
+    min-width: 100% !important;
+    *width: 100%;
+  }
+
   /* HTML5 display-role reset for older browsers */
   article, aside, details, figcaption, figure,
   footer, header, hgroup, menu, nav, section {
