--- a/templates/template-embed-providers.html
+++ b/templates/template-embed-providers.html
@@ -3,6 +3,11 @@
 <script async defer src="https://platform.twitter.com/widgets.js"></script>
 <script async defer src="https://connect.facebook.net/en_US/all.js#xfbml=1&status=0&appId="></script>
 <script src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+<style class="embedly-css">
+    .card .hdr{
+      display: none;
+    }
+  </style>
 <script>
     embedly("defaults", {
         cards: {
