Squashed 'server/liveblog/themes/themes_assets/default/' changes from 0e118ef..b78024b
b78024b Merge pull request #139 from liveblog/fix/embedly-headline-remove
f451b56 fix: remove embedly card headline LBSD-2104
24b541a Merge pull request #138 from ZeitOnline/feature/extend-theme-css
b33580b fix: relative dates added back
365f69d fix: LBSD-2096 waterproof iframe behaviour on IPhones
93ea06d Import parent theme CSS first as necessary

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: b78024b4860e558f3021f9b24f7727c4747222d2

--- a/server/liveblog/themes/themes_assets/default/templates/template-embed-providers.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-embed-providers.html
@@ -3,6 +3,11 @@
 <script async defer src="https://platform.twitter.com/widgets.js"></script>
 <script async defer src="https://connect.facebook.net/en_US/all.js#xfbml=1&status=0&appId="></script>
 <script src="//cdn.embedly.com/widgets/platform.js" charset="UTF-8"></script>
+<style class="embedly-css">
+    .card .hdr{
+      display: none;
+    }
+  </style>
 <script>
     embedly("defaults", {
         cards: {
