--- a/server/liveblog/themes/themes_assets/amp/templates/template-index.html
+++ b/server/liveblog/themes/themes_assets/amp/templates/template-index.html
@@ -18,6 +18,7 @@
     <script async custom-element="amp-image-lightbox" src="https://cdn.ampproject.org/v0/amp-image-lightbox-0.1.js"></script>
     <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
     <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
+    <script async custom-element="amp-brightcove" src="https://cdn.ampproject.org/v0/amp-brightcove-0.1.js"></script>
     <style amp-custom>
     <!-- inject:amp-styles -->
     <!-- endinject -->
