--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -171,7 +171,7 @@
     background: @white;
     left: 10px;
     right: 10px;
-    padding: 30px;    
+    padding: 30px;
     box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.2);
     z-index: 2;
   }
@@ -596,13 +596,13 @@
     background-size: 9px;
   }
 
-  .lb-type--embed-twitter, .lb-type--embed-facebook, .lb-type--embed-youtube, .lb-type--embed-instagram {
+  .lb-type--embed-twitter, .lb-type--embed-facebook, .lb-type--embed-youtube, .lb-type--embed-instagram, .lb-type--embed-brightcove {
     width: 40px;
     height: 40px;
     margin-left: -20px;
   }
 
-  .lb-type--embed-twitter + .lb-post-date-icons, .lb-type--embed-facebook + .lb-post-date-icons, .lb-type--embed-youtube + .lb-post-date-icons, .lb-type--embed-instagram + .lb-post-date-icons {
+  .lb-type--embed-twitter + .lb-post-date-icons, .lb-type--embed-facebook + .lb-post-date-icons, .lb-type--embed-youtube + .lb-post-date-icons, .lb-type--embed-instagram + .lb-post-date-icons, .lb-type--embed-brightcove + .lb-post-date-icons {
     margin-left: 40px;
   }
 
@@ -627,6 +627,12 @@
   .lb-type--embed-instagram {
     background-color: #444;
     background-image: url("../images/instagram_logo.png");
+    background-size: 20px;
+  }
+
+  .lb-type--embed-brightcove {
+    background-color: #444;
+    background-image: url("../images/video_logo.png");
     background-size: 20px;
   }
 
