feature: brightcove support, in-page embeds, minor fixes

--- a/server/liveblog/themes/themes_assets/amp/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/amp/templates/template-post.html
@@ -53,6 +53,13 @@ class="lb-post list-group-item show-author-avatar  {% if item.lb_highlight %}lb-
       height="20"
       >
       </amp-img>
+    {% elif item.post_items_type =="embed-brightcove" %}
+      <amp-img src="{{ assets_root }}images/video_logo.png"
+      layout="fixed"
+      width="20"
+      height="20"
+      >
+      </amp-img>
     {% elif item.post_items_type and item.post_items_type | truncate(5, True, '', 0) == "embed" %}
       <amp-img src="{{ assets_root }}images/link-icon.png"
       layout="fixed"
