--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -631,7 +631,7 @@
   }
 
   .lb-type--embed-brightcove {
-    background-color: #444;
+    background-color: #abc37a;
     background-image: url("../images/video_logo.png");
     background-size: 20px;
   }
