--- a/server/liveblog/themes/themes_assets/amp/less/embed.less
+++ b/server/liveblog/themes/themes_assets/amp/less/embed.less
@@ -19,7 +19,7 @@
     transition: opacity .35s ease-in-out;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-  
+
   .aligncenter {
     margin-left: 50%;
     position: absolute;
@@ -642,9 +642,15 @@
     background-color: #444;
     amp-img {
       margin: 10px 0 0 10px;
-    } 
+    }
   }
 
+  .lb-type--embed-brightcove {
+    background-color: #abc37a;
+    amp-img {
+      margin: 10px 0 0 10px;
+    }
+  }
 
   // Posts End
 
@@ -1092,7 +1098,7 @@ body .scorecard-top__info {
           margin-left: 0;
           margin-top: 18px;
       }
-      
+
       .lb-post, .lb-sticky-top-post {
           margin: 0;
       }
@@ -1391,7 +1397,7 @@ body .scorecard-top__info {
         line-height: 1.6em;
       }
     }
-    
+
   .hide-item {
     display: none;
   }
