Added translate attribute

--- a/client/app/scripts/liveblog-syndication/views/attach-syndicated-blogs-modal.html
+++ b/client/app/scripts/liveblog-syndication/views/attach-syndicated-blogs-modal.html
@@ -58,10 +58,10 @@
                             class="sd-toggle--vertical-middle"></span>
                     </dd>
 
-                    <dt class="panel-definition-list__term">Status</dt>
+                    <dt class="panel-definition-list__term" translate>Status</dt>
                     <dd class="panel-definition-list__definition">
-                        <div ng-if="blog.blog_status=='closed'" class="state-label state-draft state-label--no-float">Archived</div>
-                        <div ng-if="blog.blog_status=='open'" class="state-label state-published state-label--no-float">Active</div>
+                        <div ng-if="blog.blog_status=='closed'" class="state-label state-draft state-label--no-float" translate>Archived</div>
+                        <div ng-if="blog.blog_status=='open'" class="state-label state-published state-label--no-float" translate>Active</div>
                     </dd>
 
                 </dl>
