--- a/client/app/scripts/liveblog-syndication/views/producer-edit-form.html
+++ b/client/app/scripts/liveblog-syndication/views/producer-edit-form.html
@@ -1,5 +1,5 @@
 <form name="producerForm" class="flat" novalidate ng-submit="save()">
-    <div class="action-bar clearfix" ng-class="{show: !producerForm.$pristine}">
+    <div class="action-bar clearfix" ng-class="{show: !producerForm.$pristine || dirty}">
         <button ng-disabled="notValidName(producer, producers)" id="save-edit-btn"
             type="submit"
             class="btn btn--primary pull-right"
@@ -12,9 +12,15 @@
             ng-click="cancel()"
             translate>Cancel</button>
     </div>
+    <div class="profile-pic">
+        <figure class="avatar">
+            <img sd-user-avatar data-user="producer" alt="{{ producer.name }}">
+            <a href="" class="change-photo" ng-click="editPicture()" translate>Change Photo</a>
+        </figure>
+    </div>
 
     <div class="profile-info editmode syndication">
-        <div class="details-info details-info--no-avatar form-flat" ng-class="{shifted : error}">
+        <div class="details-info form-flat" ng-class="{shifted : error}">
             <div class="title">{{ 'General' | translate }} <span class="required-info" translate>* mandatory fields</span></div>
             <fieldset class="label-light">
                 <div sd-info-item>
