--- a/client/app/scripts/liveblog-syndication/views/producer-list-item.html
+++ b/client/app/scripts/liveblog-syndication/views/producer-list-item.html
@@ -5,8 +5,8 @@
 
     <figure class="avatar avatar-with-info">
         <div class="logged-info"></div>
-        <div class="producer-image">
-            <img sd-producer-avatar data-producer="producer">
+        <div class="user-image">
+            <img sd-user-avatar data-user="producer">
         </div>
     </figure>
 
