feature: author position LBSD-2114

--- a/server/liveblog/themes/themes_assets/amp/less/embed.less
+++ b/server/liveblog/themes/themes_assets/amp/less/embed.less
@@ -713,6 +713,13 @@
     justify-content: center;
   }
 
+  .lb-author--bottom {
+    height: 30px;
+    margin-top: -7px;
+    margin-left: auto;
+  }
+
+
   .lb-author:after {
     content: '';
     clear: both;
@@ -730,6 +737,12 @@
     margin-left: 20px;
     width: 45px;
     height: 45px;
+  }
+
+  .lb-author--bottom .lb-author__avatar {
+    width: 30px;
+    height: 30px;
+    margin-left: 10px;
   }
 
   div.lb-author__avatar {
