--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -688,6 +688,12 @@
     justify-content: center;
   }
 
+  .lb-author--bottom {
+    height: 30px;
+    margin-bottom: -40px;
+    margin-left: auto;
+  }
+
   .lb-author:after {
     content: '';
     clear: both;
@@ -705,6 +711,12 @@
     margin-left: 20px;
     width: 45px;
     height: 45px;
+  }
+
+  .lb-author--bottom .lb-author__avatar {
+    width: 30px;
+    height: 30px;
+    margin-left: 10px;
   }
 
   div.lb-author__avatar {
@@ -824,6 +836,11 @@ lb-producer__author:before {
     margin-bottom: -20px;
     height: 24px;
     visibility: visible;
+  }
+
+  .lb-post-actions--top {
+    margin-top: 0;
+    margin-bottom: 0;
   }
 
   .lb-post:hover .lb-post-actions {
