LBSD-2127: multi-digit scorecards break the design of Default and AMP themes when a scorecard image is present

--- a/client/app/scripts/liveblog-edit/views/scorecards.html
+++ b/client/app/scripts/liveblog-edit/views/scorecards.html
@@ -142,8 +142,11 @@
         line-height: 120%;
         word-wrap: break-word;
     }
-    .scorecard-top span.team-score {
+    .scorecard-top__column.scorecard-top__column--result {
         position: relative;
+        z-index: 2;
+    }
+    .scorecard-top span.team-score {
         font-size: 42px;
         font-weight: bold;
         line-height: 1em;
