--- a/server/liveblog/themes/themes_assets/amp/less/embed.less
+++ b/server/liveblog/themes/themes_assets/amp/less/embed.less
@@ -1414,3 +1414,13 @@ body .scorecard-top__info {
     display: none;
   }
 }
+
+.lb-blog-picture-container {
+  position: relative;
+  width: 100%;
+  height: 300px;
+
+  amp-img img {
+    object-fit: contain;
+  }
+}
