--- a/server/liveblog/themes/themes_assets/amp/templates/template-timeline.html
+++ b/server/liveblog/themes/themes_assets/amp/templates/template-timeline.html
@@ -9,9 +9,11 @@
   <p>{{ blog.description | safe }}</p>
   {% endif %}
 
-  {% if settings.showImage and blog.picture_url %}
-  <amp-img src="{{ blog.picture_url }}" width="600" height="400" layout="responsive"></amp-img>
-  {% endif %}
+  {# % if settings.showImage and blog.picture_url % #}
+    <div class="lb-blog-picture-container">
+      <amp-img src="{{ blog.picture_url }}" layout="fill"></amp-img>
+    </div>
+  {# % endif % #}
 
   <div class="header-bar">
 
