LBSD-2099 Introduce ad rotation for the AMP theme

--- a/server/liveblog/themes/themes_assets/amp/less/embed.less
+++ b/server/liveblog/themes/themes_assets/amp/less/embed.less
@@ -916,11 +916,18 @@
   }
 
   .lb-advertisement {
-      position: absolute;
-      margin-top: -45px;
-      padding-left: 20px;
+      position: relative;
+      left: 2px;
       color: #767676;
       font-size: 0.75rem;
+  }
+
+  .lb-item-advertisement fieldset {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    vertical-align: baseline;
   }
 
   .lb-post:hover .lb-post-permalink, .lb-sticky-top-post:hover .lb-post-permalink {
