--- a/server/liveblog/themes/themes_assets/amp/templates/template-post.html
+++ b/server/liveblog/themes/themes_assets/amp/templates/template-post.html
@@ -21,7 +21,7 @@
 id="{{ item._id | string | replace(':', '') | replace('-', '') | replace('.', '') }}"
 data-update-time="{{ item._updated | date('X') }}"
 data-sort-time="{{ sortTime | date('X') }}"
-class="lb-post list-group-item show-author-avatar  {% if item.lb_highlight %}lb-post--highlighted{% endif %} {% if item.deleted %} hide-item {% endif %}"
+class="lb-post list-group-item show-author-avatar {% if item.sticky %}lb-item-pinned{% endif %} {% if not item.sticky and not item.deleted %}lb-not-pinned{% endif %} {% if item.lb_highlight %}lb-post--highlighted{% endif %} {% if item.deleted %} hide-item {% endif %}"
 {% if item.deleted %} data-tombstone="true" {% endif %}>
 
   <div class="lb-type lb-type--{{ item.post_items_type }}">
@@ -106,8 +106,8 @@ class="lb-post list-group-item show-author-avatar  {% if item.lb_highlight %}lb-
           height="45">
           </amp-img>
           {% elif mainItem.syndicated_creator and settings.showSyndicatedAuthor and mainItem.syndicated_creator.picture_url %}
-          <amp-img class="lb-author__avatar" 
-          src="{{ mainItem.syndicated_creator.picture_url }}" 
+          <amp-img class="lb-author__avatar"
+          src="{{ mainItem.syndicated_creator.picture_url }}"
           layout="responsive"
           width="45"
           height="45">
